stylesheet.less
@import "@{templateCommon}/basekit-bootstrap.less";

@import "@{templateLocal}/css/common-forms.less";
@import "@{templateLocal}/css/common-text.less";
@import "@{templateLocal}/css/widgets-blog.less";
@import "@{templateLocal}/css/widgets-ecom.less";

// Larget than tablet
@desktop: ~"only screen and (min-width : 769px)";
// Larger than mobile
@mobile-up: ~"only screen and (min-width : 480px)";

.flex-wrap(@wrap: nowrap) {
  -webkit-flex-wrap: @wrap;
     -moz-flex-wrap: @wrap;
      -ms-flex-wrap: @wrap;
          flex-wrap: @wrap;
}

.flex(@columns: initial) {
  -webkit-flex: @columns;
     -moz-flex: @columns;
      -ms-flex: @columns;
          flex: @columns;
}

.flex-grow(@grow: 0) {
  -webkit-flex-grow: @grow;
     -moz-flex-grow: @grow;
      -ms-flex-grow: @grow;
          flex-grow: @grow;
}

body {
    background-color: @color-swatch1;
}

.wrapper {
    width: 90%;
    margin: 0 5%;
}

.widget {
  padding-bottom: 15px;
}

.main .widget {
  clear: both;
}

a {
  color: @color-swatch6;
}

.widget.content {
  a {
      font-family: @font-swatch5-font-family;
      font-size: @font-swatch5-font-size;
      font-weight: @font-swatch5-font-weight;
      color: @color-swatch6;
      text-decoration: none;
  }

  a:hover {
      text-decoration: underline
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  p {
      margin: 0;
      padding: 0 0 10px;
  }
  ul,
  ol,
  li {
      font-family: @font-swatch5-font-family;
      font-size: @font-swatch5-font-size;
      font-weight: @font-swatch5-font-weight;
      line-height: @font-swatch5-line-height;
      color: @font-swatch5-color;
      letter-spacing: @font-swatch5-letter-spacing;
  }

  blockquote {
      padding: 20px;
      margin:20px;
      quotes: "\201C""\201D""\2018""\2019";
      font-family:@font-swatch3-font-family;
      font-size:@font-swatch3-font-size;
      font-weight:@font-swatch3-font-weight;
      line-height:@font-swatch3-line-height;
      color:@color-swatch6;
  }

  blockquote:before {
      font-family: Arial, serif;
      color: @color-swatch4;
      content: open-quote;
      font-size: 2em;
      line-height: .1em;
      margin-right: .1em;
      vertical-align: -.4em;
  }

  blockquote p {
      display: inline;
      font-family:@font-swatch5-font-family;
      font-size:@font-swatch5-font-size;
      font-weight:@font-swatch5-font-weight;
      line-height:@font-swatch5-line-height;
      color:@color-swatch4;
  }

  ul, ol, li {
    font-family:@font-swatch5-font-family;
    font-size:@font-swatch5-font-size;
    font-weight: @font-swatch5-font-weight;
    line-height:@font-swatch5-line-height;
    color:@font-swatch5-color;
    letter-spacing: @font-swatch5-letter-spacing;
  }

  .bk-content-text ul, .bk-content-text ol, .bk-content-text li {
    padding-left: 1.4em;
    text-indent: -1.4em;
  }
}

input, textarea, button {
  border-radius: 0;
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
  -webkit-appearance: none;
}

select {
  border-radius: 0;
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
}

input, textarea, select {
  background-color: @color-swatch7;
  border: 1px solid @color-swatch4;
  box-sizing: border-box;
}



/* ===============================
   CUSTOM CSS
   =============================== */

.main {
    border-bottom: 1px solid darken(@color-swatch2,10%);
    padding-bottom: 40px;
}

body.edit .widget.navigation, body.edit .widget.extendednavigation {
    overflow: visible;
}



/* ===============================
   HEADER
   =============================== */

.bk-header {
    padding: 40px 0;
    background-color: transparent;
    border-bottom: 1px solid darken(@color-swatch2,10%);
    margin-bottom: 40px;
    .wrapper {
      // Flex parent
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-direction: normal;
    -moz-box-direction: normal;
    -webkit-box-orient: horizontal;
    -moz-box-orient: horizontal;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: justify;
    -moz-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-content: flex-start;
    -ms-flex-line-pack: start;
    align-content: flex-start;
    -webkit-box-align: center;
    -moz-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;

      @media @tablet {
        display: block;
      }

    .companyheader {
      // Flex child
       -webkit-box-ordinal-group: 1;
      -moz-box-ordinal-group: 1;
      -webkit-order: 0;
      -ms-flex-order: 0;
      order: 0;
      -webkit-box-flex: 0;
      -moz-box-flex: 0;
      -webkit-flex: 0 1 auto;
      -ms-flex: 0 1 auto;
      flex: 0 1 auto;
      -webkit-align-self: auto;
      -ms-flex-item-align: auto;
      align-self: auto;

      min-width: 30%;



      @media @mobile {
        display: block;
      }

      .widget.companyname {

      }
    }
    .extendednavigation {
      // Flex child
      -webkit-box-ordinal-group: 1;
      -moz-box-ordinal-group: 1;
      -webkit-order: 0;
      -ms-flex-order: 0;
      order: 0;
      -webkit-box-flex: 1;
      -moz-box-flex: 1;
      -webkit-flex: 1 1 auto;
      -ms-flex: 1 1 auto;
      flex: 1 1 auto;
      -webkit-align-self: auto;
      -ms-flex-item-align: auto;
      align-self: auto;
    }
  }
}



.widget.logo {
  display: inline-block;
  vertical-align: middle;
  margin-right: 8px;
  max-width: 100%;
  .logo {
    line-height: 0;
  }
}

.companyheader {
    @media @tablet {
      padding-right: 40px;
    }
}

/* COMPANY NAME */

.widget.companyname {
  display: inline-block;
  vertical-align: middle;
  margin-right: 10px;
  @media @mobile {
    margin-right: 0;
  }
}

.companyname a:hover {
  text-decoration: none;
}
/* ... */

